--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ input[type="range"] {
 }
 
 input[type="text"] {
-    width: 5.5rem;
+    width: 6rem;
     margin-right: 0.1rem; /*for spacing between the resize bar*/
     border-radius: 0.3rem;
     height: 2rem;
@@ -296,6 +296,16 @@ input[type="color"] {
     position: relative;
     background-color: rgb(66, 140, 14);
     width: 40%;
+}
+
+#saveTextInput {
+    width: 50%;
+    border-radius: 0.3rem;
+    height: 2.4rem;
+    font-family: "Audiowide", sans-serif;
+    font-size: 1.8rem;
+    /* margin-bottom: 0.3rem; */
+    /* display: block; */
 }
 
 
