--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
     --resizerWidth: 0.7rem;
     --sidebarAudioSpacing: 0.5rem;
     --backgroundColorInput: rgba(0, 0, 0, 0.7);
-    --backgroundColorOddElement: rgba(255, 255, 255, 0.05);
-    --backgroundColorEvenElement: rgba(162, 162, 162, 0.05);
+    --backgroundColorOddElement: rgba(124, 124, 124, 0.12);
+    --backgroundColorEvenElement: rgba(226, 226, 226, 0.12);
     --backgroundColorElementCategoryHover: rgba(0, 0, 0, 0.6);
     --textColorInput: rgb(239, 239, 239);
     --textColorVariable: rgb(222, 215, 215, 0.9);
@@ -168,7 +168,7 @@ input[type="color"] {
     border-width: 2rem; */
 }
 
-.sidebarCategory > *{
+.sidebarCategory > * {
     text-shadow: none;
     border-radius: 1rem;
 }
@@ -182,10 +182,16 @@ input[type="color"] {
 }
 
 .sidebarInsideCategoryElements{
-    /* background-color: bisque; */
     cursor: auto;
     font-size: 2rem;
     /* transition: 1s; */
+}
+
+#emptyDivForEvenNumberOfDivs{
+    height: 0;
+    padding: 0;
+    margin: 0;
+    font-size: 0;
 }
 
 .sidebarElement{
@@ -284,45 +290,6 @@ input[type="color"] {
     margin: 0.5rem;
 }
 
-.saveLoadButton, .yesNoButton{
-    /* display: flex; */
-    position: relative;
-    background-color: rgb(73, 158, 13);
-    width: 40%;
-    border-radius: 0.5rem;
-    margin: 1rem;
-}
-
-.flexContainer {
-    display: flex;
-}
-
-#deleteYesNoContainer, #saveYesNoContainer{
-    display: none;
-}
-
-.saveLoadButton:hover {
-    background-color: rgb(66, 140, 14);
-}
-
-#saveTextInput {
-    width: 50%;
-    border-radius: 0.3rem;
-    height: 2.4rem;
-    font-family: "Audiowide", sans-serif;
-    font-size: 1.8rem;
-    /* margin-bottom: 0.3rem; */
-    /* display: block; */
-}
-
-#deleteButton {
-    background-color: rgb(140, 10, 10);
-}
-
-.saveLoadMessage {
-    text-transform: none;
-}
-
 #openAudioButton:hover, #openMenuButton:hover{
     background-color: rgba(255, 255, 255, 0.05);
     box-shadow: 0 0 8px var(--shadowColorCategory);
@@ -394,4 +361,78 @@ input[type="color"] {
     border-radius: 50px;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+/* LOAD AND SAVE ELEMENTS */
+
+.flexContainer {
+    display: flex;
+    /* spread buttons evenly */
+    justify-content: space-evenly;
+}
+
+/* remove parent's hover effect text-shadow on buttons */
+.sidebarCategory > * > * > * > .saveLoadButton, .sidebarCategory > * > * > * > .yesNoButton  {
+    /* text-shadow: none; */
+    text-shadow: 1px -1px 1px black;
+}
+
+.saveLoadButton, .yesNoButton{
+    position: relative;
+    background-color: var(--textColorCategory);
+    width: 42%;
+    border-radius: 0.5rem;
+    margin: 0.5rem 0 0.5rem 0;
+}
+
+.saveLoadButton:hover, .yesNoButton:hover {
+    box-shadow: 0 0 8px var(--shadowColorCategory);
+    text-shadow: 2px -1px 1px black;
+    outline: 2px solid var(--shadowColorCategory);
+    transition: 1s ease;
+}
+
+#deleteYesNoContainer, #saveYesNoContainer{
+    display: none;
+}
+
+#saveTextInput {
+    width: 50%;
+    border-radius: 0.3rem;
+    height: 2.4rem;
+    font-family: "Audiowide", sans-serif;
+    font-size: 1.8rem;
+}
+
+#deleteButton {
+    background-color: var(--shadowColorCategory);
+    /* color: var(--shadowColorCategory); */
+    color: var(--textColorCategory);
+}
+
+#deleteButton:hover, .yesButton:hover {
+    box-shadow: 0 0 8px var(--shadowColorCategory);
+    outline: 2px solid var(--textColorCategory);
+    transition: 1s ease;
+    text-shadow: 2px -1px 1px black;
+}
+
+.saveLoadMessage {
+    text-transform: none;
+    color: var(--textColorInput);
+}
+
+.yesButton {
+    background-color: var(--shadowColorCategory);
+    color: var(--textColorCategory);
+}
+
+.noButton {
+    background-color: var(--textColorCategory);
+    color: var(--shadowColorCategory);
+}
+
+#saveButton, #loadButton {
+    background-color: var(--textColorCategory);
+    color: var(--shadowColorCategory);
 }
