--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ input[type="color"] {
     margin: 0.2rem 0 0.2rem 0;
 }
 
-#deleteYesNoContainer, #saveYesNoContainer{
+#deleteYesNoContainer, #saveYesNoContainer, #importYesNoContainer {
     display: none;
 }
 
