--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ input[type="color"] {
     cursor: pointer;
 }
 
-#openMenuButton{
+#openSidebarButton{
     position: absolute;
     display: none;
     border-radius: 2rem;
@@ -258,7 +258,7 @@ input[type="color"] {
     margin: 0.5rem;
 }
 
-#hideMenuButton{
+#hideSidebarButton{
     top: calc(50% - 4.8rem); /*minus button height hardcoded*/
     left: calc(var(--initialSidebarWidth));
     font-size: 1.5rem;
@@ -288,7 +288,7 @@ input[type="color"] {
     text-shadow: 0px 0px 3px var(--shadowColorCategory);
 }
 
-#hideAudioButton:hover, #hideMenuButton:hover{
+#hideAudioButton:hover, #hideSidebarButton:hover{
     box-shadow: 0 0 8px var(--shadowColorCategory);
     color: var(--shadowColorCategory);
     transition: 1s ease;
@@ -304,7 +304,7 @@ input[type="color"] {
     margin: 0.5rem;
 }
 
-#openAudioButton:hover, #openMenuButton:hover{
+#openAudioButton:hover, #openSidebarButton:hover{
     background-color: rgba(255, 255, 255, 0.05);
     box-shadow: 0 0 8px var(--shadowColorCategory);
     color: var(--shadowColorCategory);
@@ -402,6 +402,7 @@ input[type="color"] {
     width: 42%;
     border-radius: 0.5rem;
     margin: 0.2rem 0 0.2rem 0;
+    overflow: hidden;
 }
 
 #deleteYesNoContainer, #saveYesNoContainer, #importYesNoContainer {
