--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html, body {
     height: 100%;
     user-select: none;
     display: flex;
-    /* background-color: #fff; */
+    background-color: rgb(0, 0, 0);
 }
 
 * {
